--- a/README.Rmd
+++ b/README.Rmd
@@ -24,33 +24,11 @@ The goal of temla is to ...
 
 ## Installation
 
-You can install the released version of temla from [CRAN](https://CRAN.R-project.org) with:
+You can install temla using:
 
 ``` r
-install.packages("temla")
+remotes::install_github("tanaylab/temla")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(temla)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
