changed name to methylayer

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,21 +13,21 @@ knitr::opts_chunk$set(
 )
 ```
 
-# temla
+# methylayer
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/temla)](https://CRAN.R-project.org/package=temla)
+[![CRAN status](https://www.r-pkg.org/badges/version/methylayer)](https://CRAN.R-project.org/package=methylayer)
 <!-- badges: end -->
 
-The goal of temla is to ...
+The goal of methylayer is to ...
 
 ## Installation
 
-You can install temla using:
+You can install methylayer using:
 
 ``` r
-remotes::install_github("tanaylab/temla")
+remotes::install_github("tanaylab/methylayer")
 ```
 
 ## Example
